--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
   </head>
 
   <body>
-
+    <header></header>
+    <main>
+      <div class="box-list">
+        <section class="box">
+          <div class="box-number">step1</div>
+          <div class="box-image1"></div>
+          <h3 class="box-title">タイトルが入ります</h3>
+          <p class="box-text">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
+        </section>
+        <section class="box">
+          <div class="box-number">step2</div>
+          <div class="box-image2"></div>
+          <h3 class="box-title">タイトルが入ります</h3>
+          <p class="box-text">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
+        </section>
+        <section class="box">
+          <div class="box-number">step3</div>
+          <div class="box-image3"></div>
+          <h3 class="box-title">タイトルが入ります</h3>
+          <p class="box-text">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
+        </section>
+      </div>
+    </main>
+    <footer></footer>
   </body>
 </html>
